<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackground">

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/idHolder"
            android:visibility="invisible"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/route_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/chevron_right"
            android:layout_toStartOf="@+id/chevron_right"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/start_colon"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/route_name"
            android:id="@+id/start_address_label"
            android:layout_alignParentLeft="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/start_address"
            android:layout_alignTop="@+id/start_address_label"
            android:layout_toRightOf="@+id/start_address_label"
            android:layout_toEndOf="@+id/start_address_label"
            android:layout_toLeftOf="@+id/chevron_right"
            android:layout_toStartOf="@+id/chevron_right"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/end_colon"
            android:id="@+id/end_address_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/start_address"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/end_address"
            android:layout_toEndOf="@+id/end_address_label"
            android:layout_toLeftOf="@+id/chevron_right"
            android:layout_toStartOf="@+id/chevron_right"
            android:layout_below="@+id/start_address"
            android:layout_alignLeft="@+id/start_address"
            android:layout_alignStart="@+id/start_address"/>

    <ImageView
            android:src="@drawable/ic_chevron_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/chevron_right"
            android:gravity="center_vertical"
            android:contentDescription="@string/tab_details"
            android:layout_centerVertical="true"/>

</RelativeLayout>